--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -6,6 +6,12 @@
   .title {
     font-size: 28px;
     margin-bottom: 25px;
+    cursor: pointer;
+    width: 5%;
+
+    &:hover {
+      color: gray;
+    }
   }
 
   .preview {
