commiting latest changes

--- a/client/src/components/collection-preview/collection-preview.styles.scss
+++ b/client/src/components/collection-preview/collection-preview.styles.scss
@@ -3,11 +3,19 @@
   flex-direction: column;
   margin-bottom: 30px;
 
+  @media screen and (max-width: 800px) {
+    align-items: center;
+  }
+
   .title {
     font-size: 28px;
     margin-bottom: 25px;
     cursor: pointer;
     width: 5%;
+
+    @media screen and (max-width: 800px) {
+      width: unset;
+    }
 
     &:hover {
       color: gray;
@@ -17,5 +25,11 @@
   .preview {
     display: flex;
     justify-content: space-around;
+
+    @media screen and (max-width: 800px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 15px;
+    }
   }
 }
