--- a/client/src/components/menu-item/menu-item.styles.scss
+++ b/client/src/components/menu-item/menu-item.styles.scss
@@ -1,6 +1,6 @@
 .menu-item {
   min-width: 30%;
-  height: 240px;
+  height: 380px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
@@ -33,6 +33,10 @@
   &:last-child {
     margin-left: 7.5px;
   }
+
+  // @media screen and (max-width: 800px) {
+  //   height: 200px;
+  // }
 
   .background-image {
     width: 100%;
