--- a/client/src/pages/checkout/checkout.styles.scss
+++ b/client/src/pages/checkout/checkout.styles.scss
@@ -6,6 +6,10 @@
   align-items: center;
   margin: 50px auto 0;
 
+  @media screen and (max-width:800px) {
+    width: 90%;    
+  }
+
   .checkout-header {
     width: 100%;
     padding: 10px 0;
@@ -13,12 +17,21 @@
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
 
+
     .header-block {
       text-transform: capitalize;
       width: 23%;
 
       &:last-child {
         width: 8%;
+      }
+
+      @media screen and (max-width: 800px) {
+        width: 22%;
+
+        &:last-child {
+          width: 12%;
+        }
       }
     }
   }
